--- a/index.html
+++ b/index.html
@@ -4,101 +4,146 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   
-  <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="./styles/style.css">
-  <title>Document</title>
+
+   <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
+   <link rel="stylesheet" href="./styles/style.css">
+   <title>Document</title>
 </head>
-<body>
-   
-<div class="container">
-    <div class="row d-flex col-12 bg-success  p-3 text-light div_first">  <h2 class="title d-flex justify-content-center align-items-center">Namoz vaqtlari</h2></div>
+<body class="body">
 
-   <div class="row">
-      <div class=" col-12 p-3 text-right d-flex">
-             <h5 class="col-6  d-flex justify-content-end align-items-center">Hududni tanlang:</h5>
+   <div class="container">
+      <div class="row d-flex col-12 bg-success  p-3 text-light div_first">
 
-             <select class="form-select col-6 select" id="region">
+
+         <div class="form-check form-switch form-check-reverse">
+            <input class="form-check-input" type="checkbox" id="flexSwitchCheckReverse">
+            <label class="form-check-label " for="flexSwitchCheckReverse">light night</label>
+         </div>
+         <h2 class="title d-flex justify-content-center align-items-center title_third">Namoz vaqtlari</h2>
+      </div>
+
+      <div class="row div_second">
+         <div class=" col-12 p-3 text-right d-flex">
+            <h5 class="col-6  d-flex justify-content-end align-items-center title_second">Hududni tanlang:</h5>
+
+            <select class="form-select col-6 select" id="region">
                <option disabled selected>Mintaqani tanlang</option>
             </select>
-      </div>
-
-    
-     
+         </div>
          <div class="col-12  d-flex">
-      <div class="col-6 p-4 bg-light">
-         <h2 class="text-dark">Mintaqani tanlang: <span class="text-warning" id="city"></span></h2>
+            <div class="col-6 p-4 bg-light">
+               <h2 class="text-dark">Mintaqani tanlang: <span class="text-warning text_second" id="city"></span></h2>
+            </div>
+            <div class="col-6 p-4 bg-light">
+               <h2> <span class="text-warning text_first" id="time">20:58:03</span></h2>
+            </div>
+         </div>
       </div>
-      <div class="col-6 p-4 bg-light">
-         <h2> <span class="text-warning" id="time">20:58:03</span></h2>
+      <div class="row d-flex justify-content-between gap-4 pt-5">
+         <div class="col text-center card box p-3">
+            <h3 class="time">Tong</h3>
+            <img src="./images/tong.svg" alt="tong" class="card-image">
+            <h4 class="fs-1">
+               04:58
+            </h4>
+         </div>
+
+         <div class="col text-center card box p-3">
+            <h3 class="time">Quyosh</h3>
+            <img src="./images/sunrise.svg" alt="quyosh" class="card-image">
+            <h4 class="fs-1">
+               06:05
+            </h4>
+         </div>
+
+         <div class="col text-center card box p-3">
+            <h3 class="time">Peshin</h3>
+            <img src="./images/sun.svg" alt="peshin" class="card-image">
+            <h4 class="fs-1">
+               12:38
+            </h4>
+         </div>
+
+         <div class="col text-center card box p-3">
+            <h3 class="time">Asr</h3>
+            <img src="./images/sunsasr.svg" alt="asr" class="card-image">
+            <h4 class="fs-1">
+               16:58
+            </h4>
+         </div>
+
+         <div class="col text-center card box p-3">
+            <h3 class="time">Shom</h3>
+            <img src="./images/shom.svg" alt="shom" class="card-image">
+            <h4 class="fs-1">
+               17:48
+            </h4>
+         </div>
+
+         <div class="col text-center card box p-3">
+            <h3 class="time">Xufton</h3>
+            <img src="./images/moon.svg" alt="xufton" class="card-image">
+            <h4 class="fs-1">
+               19:46
+            </h4>
+         </div>
+
+      </div>
+      <div class="row mt-5">
+
+         <div class="row">
+            <h2 class="text-success fw-bold">BIR HAFTALIK</h2>
+         </div>
+   
+
+
+         <table class="table table-striped table-hover table-success" id="table">
+            <thead>
+               <tr>
+                  <th>Mintaqa</th>
+                  <th>sana</th>
+                  <th>kun</th>
+                  <th>Bomdod</th>
+                  <th>Quyosh</th>
+                  <th>Peshin</th>
+                  <th>Asr</th>
+                  <th>Shom</th>
+                  <th>Hufton</th>
+               </tr>
+            </thead>
+            <tbody id="week">
+
+            </tbody>
+         </table>
+      </div>
+
+    <div class="row">
+      <h2 class="mt-5 text-warning fw-bold">BIR OYLIK</h2>
+    </div>
+      <div class="row">
+         <table class="table table-striped table-hover table-warning" id="table2">
+            <thead>
+               <tr>
+                  <th>Mintaqa</th>
+                  <th>oy</th>
+                  <th>sana</th>
+                  <th>kun</th>
+                  <th>Bomdod</th>
+                  <th>Quyosh</th>
+                  <th>Peshin</th>
+                  <th>Asr</th>
+                  <th>Shom</th>
+                  <th>Hufton</th>
+               </tr>
+            </thead>
+            <tbody id="month">
+
+            </tbody>
+         </table>
       </div>
    </div>
-   </div>
-
-
-
-
-   <div class="row d-flex justify-content-between gap-4 pt-5">
-  
-
-
-     <div class="col text-center card box p-3">
-      <h3 class="time">Tong</h3>
-      <img src="./images/tong.svg" alt="tong" class="card-image">
-      <h4 class="fs-1">
-         04:58
-      </h4>
-     </div>
-
-     <div class="col text-center card box p-3">
-      <h3 class="time">Quyosh</h3>
-      <img src="./images/sunrise.svg" alt="quyosh" class="card-image">
-      <h4 class="fs-1">
-         06:05
-      </h4>
-     </div>
-
-     <div class="col text-center card box p-3">
-      <h3 class="time">Peshin</h3>
-      <img src="./images/sun.svg" alt="peshin" class="card-image">
-      <h4 class="fs-1">
-        12:38
-      </h4>
-     </div>
-
-     <div class="col text-center card box p-3">
-      <h3 class="time">Asr</h3>
-      <img src="./images/sunsasr.svg" alt="asr" class="card-image">
-      <h4 class="fs-1">
-         16:58
-      </h4>
-     </div>
-
-     <div class="col text-center card box p-3">
-      <h3 class="time">Shom</h3>
-      <img src="./images/shom.svg" alt="shom" class="card-image">
-      <h4 class="fs-1">
-         17:48
-      </h4>
-     </div>
-
-     <div class="col text-center card box p-3">
-      <h3 class="time">Xufton</h3>
-      <img src="./images/moon.svg" alt="xufton" class="card-image">
-      <h4 class="fs-1">
-         19:46
-      </h4>
-     </div>
-
-
-
-
-
-   </div>
-</div>
-
-<script src="./region.js"></script>
-<script src="./plugin.js"></script>
-<script src="./script.js"></script>  
+   <script src="./region.js"></script>
+   <script src="./plugin.js"></script>
+   <script src="./script.js"></script>
 </body>
 </html>
